[package]
name = "crevette"
description = "Converter for using cargo-crev reviews with cargo-vet"
keywords = ["cargo-vet", "crev2vet", "cargo-crev", "supply-chain", "security"]
categories = ["development-tools"]
authors = ["Kornel <kornel@geekhood.net>"]
edition = "2021"
license = "MPL-2.0 OR MIT OR Apache-2.0"
repository = "https://github.com/crev-dev/crevette"
rust-version = "1.73"
version = "0.25.6"
readme = "README.md"
include = ["src/*.rs", "Cargo.toml", "README.md", "LICENSE-MIT"]

[dependencies]
crev-lib = "0.25"
crev-data = "0.25"
crev-wot = "0.25"
semver = "1.0.20"
serde = "1.0.193"
directories-next = "2.0.0"
toml_edit = { version = "0.21.0", features = ["serde"] }
cargo_author = { version = "1.0.6", optional = true }
flate2 = { version = "1.0.28", optional = true }
index-debcargo = { version = "1.1.1", optional = true }
index-guix = { version = "1.0.0", optional = true }
reqwest = { version = "0.11.22", features = ["blocking"], optional = true }

[features]
# Ability to export list of crates vetted by Debian
debcargo = ["dep:index-debcargo", "dep:cargo_author", "dep:reqwest", "dep:flate2"]
# Ability to export list of crates included in Guix
guix = ["dep:index-guix"]

[profile.dev.package]
sha1_smol.opt-level = 3
adler.opt-level = 3
miniz_oxide.opt-level = 3
